Adding new function to API, preload data, using to prefill generated labels.
